# FlashIM_by_ai

./: .gitignore  README.md
client/: pubspec.yaml
client/android/app/: build.gradle.kts
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart
client/lib/app/: app_router.dart  flash_im_app.dart
client/lib/core/auth/: auth_cache_store.dart
client/lib/core/config/: app_config.dart  (+2 more)
client/lib/playground/: playground_home_page.dart
client/linux/: CMakeLists.txt
client/linux/runner/: my_application.cc
client/macos/Runner.xcodeproj/: project.pbxproj
client/modules/app_starter/: pubspec.yaml
client/modules/flash_auth/: pubspec.yaml
client/modules/flash_im_core/: pubspec.yaml
client/modules/flash_session/: pubspec.yaml
client/test/: widget_test.dart
client/windows/runner/: Runner.rc
docs/develop/report/: conversation-playground-0to1-report.md  im-playground-jwt-ws-integration-report.md
docs/develop/version/: v.md
docs/project/setup/: rust.md
docs/research/novel/: writing-humans.md
docs/research/project/: auth_overview.md  chat_room_message_broadcast.md  client_auth_logic_analysis.md  relational_database_selection_for_auth_persistence.md  report.md  rust_web.md  websocket_jwt_auth.md  websocket_vs_http.md
docs/symbol/doc/: mermaid.md
proto/: ws.proto
scripts/database/: install_pgadmin4.sh  new_sqlx_migration.sh  reset_sqlx_database.sh  setup_sqlx_database.sh  sqlx_common.sh  start_postgres_service.sh
scripts/playground/: ws_smoke_test.mjs
scripts/proto/: gen.ps1
scripts/server/: session_api_test_link.sh  start_backend.sh
scripts/setup/: install-rust-macos.sh  install_postgres  verify-rust-macos.sh
server/: .env.example  Cargo.toml
server/migrations/: 20260612170000_auth_accounts_core.sql
server/modules/flash_auth/: Cargo.toml
server/modules/flash_auth/src/: jwt.rs  lib.rs  password.rs
server/modules/flash_auth/src/models/: auth.rs  user.rs
server/modules/flash_auth/src/routes/: auth.rs  mod.rs
server/modules/flash_auth/src/services/: auth_service.rs  user_service.rs
server/modules/flash_auth/src/store/: memory.rs  mod.rs  postgres.rs
server/modules/flash_core/: Cargo.toml
server/modules/flash_core/src/: config.rs  context.rs  error.rs  jwt.rs  lib.rs  response.rs
server/modules/flash_core/src/runtime/: chat_room.rs  mod.rs  postgres.rs
server/modules/flash_user/: Cargo.toml
server/modules/flash_user/src/: handler.rs  lib.rs  model.rs  routes.rs
server/modules/im-ws/: Cargo.toml  build.rs
server/modules/im-ws/src/: dispatcher.rs  frame.rs  handler.rs  lib.rs  proto.rs
server/src/: config.rs  error.rs  lib.rs  main.rs  response.rs  state.rs
server/src/auth/: jwt.rs  password.rs
server/src/models/: auth.rs  chat.rs  common.rs  user.rs
server/src/routes/: auth.rs  conversation.rs  health.rs  mod.rs  user.rs  ws.rs
server/src/services/: auth_service.rs  chat_room_service.rs  mod.rs  user_service.rs
server/src/store/: memory.rs  mod.rs  postgres.rs
(+166 files in other folders)
