[package]
name = "falsh-im"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
futures-util = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
local-ip-address = "0.6.13"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
tokio-tungstenite = "0.29.0"
tower = { version = "0.5.2", features = ["util"] }
