[package]
name = "falsh-im"
version = "0.3.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["ws"] }
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
local-ip-address = "0.6.13"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "json"] }
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
tokio-tungstenite = "0.29.0"
tower = { version = "0.5.2", features = ["util"] }
