[package]
name = "flash_auth"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["ws"] }
chrono = { version = "0.4.42", features = ["serde"] }
flash_core = { path = "../flash_core" }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "json"] }
tokio = { version = "1.52.3", features = ["full"] }
