[package]
name = "flash_core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
local-ip-address = "0.6.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "json"] }
tokio = { version = "1.52.3", features = ["full"] }
